# git-ai-commit-

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/git_ai_commit/: __init__.py  ai_engine.py  config.py  git_utils.py  main.py
src/git_ai_commit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_ai_engine.py  test_config.py  test_git_utils.py
